--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "An application created to ease the stress of note-taking, highlighting GET and POST requests using Express.js",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
   },
   "repository": {
     "type": "git",
